[project]
name = "mcp-server-dota2-tip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dotabase>=7.8.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.4",
    "requests>=2.32.4",
    "sqlalchemy-utils>=0.41.2",
]
